// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`with no counters renders the title and AddCounter component 1`] = `
<div
  className="App"
>
  <h1>
    Counter App
  </h1>
  <AddCounter
    onAdd={[Function]}
  />
</div>
`;

exports[`with some counters renders the title, AddCounter, and each Counter 1`] = `
<div
  className="App"
>
  <h1>
    Counter App
  </h1>
  <AddCounter
    onAdd={[Function]}
  />
  <Counter
    count={1}
    key="asdf"
    onChange={[Function]}
    title="bob"
  />
  <Counter
    count={2}
    key="qwer"
    onChange={[Function]}
    title="steve"
  />
</div>
`;
